@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 0.10.2 - unreleased
 
+  MAHOUT-1745: Purge deprecated ConcatVectorsJob from codebase (apalumbo)
+
   MAHOUT-1757: Small fix in spca formula (smarthi)
 
   MAHOUT-1756: Missing +=: and *=: operators on vectors (smarthi)
